...
    <string name="missing_date_time">Time cannot be empty.</string>
    <string name="sort_spinner_item_time">Time until meeting</string>
    <string name="invalid_date_time_past">Time specification lies is in the past.</string>
    <string name="date_time">Time</string>
    <string name="report_message">Why do you want to report the user or the offer?</string>
    <string name="publish">Publish</string>
    <string name="bad_password">Invalid password.</string>
    <string name="invalid_price">Invalid price indication.</string>
    <string name="bad_email">Invalid e-mail.</string>
    <string name="invalid_max_participants">Invalid number of participants.</string>
    <string name="bad_login">Invalid credentials.</string>
    <string name="date_format">DD.MM.YYYY</string>
    <string name="missing_title">Title must not be empty.</string>
    <string name="phone_number">Phone number</string>
    <string name="invalid_participants_interval">Invalid participant interval.</string>
...
    <string name="price">Price</string>
    <string name="sort_spinner_item_price">Price</string>
    <string name="reset_password">Forgot password?</string>
    <string name="invalid_password">Password incorrect.</string>
    <string name="password_changed">Password changed successfully.</string>
    <string name="password">Password</string>
    <string name="invalid_location">Location not found.</string>
    <string name="missing_location">Place must not be empty.</string>
    <string name="new_password">New password</string>
    <string name="delete_profile_info">Do you really want to delete your profile? Your information will be deleted and cannot be restored. Please confirm your request with your password.</string>
    <string name="minutes">minutes</string>
    <string name="min">min</string>
    <string name="report">Report</string>
    <string name="drawer_menu_my_offers">My Offers</string>
...
    <string name="host_rating">Host rating</string>
    <string name="sort_spinner_item_host_rating">Host rating</string>
    <string name="guest_rating">Guest rating</string>
    <string name="date_time_min">earliest</string>
    <string name="filter_and_sort">Filter and sort</string>
    <string name="filter">Filter</string>
    <string name="toast_error_message">An error has occurred.</string>
    <string name="notification_hint">Receive a notification before each meeting you participate in.</string>
    <string name="invalid_distance_interval">Distance interval invalid.</string>
    <string name="distance">Distance</string>
    <string name="sort_spinner_item_distance">Distance</string>
    <string name="settings">Settings</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="about">Some buttons have been disabled and thus been grayed out. They are for presentation purposes only and represent functions that are not yet implemented.</string>
    <string name="dark">Dark</string>
    <string name="participating">You\'re already participating.</string>
    <string name="contact_text">A user asks for your contact details. Choose if you want to send him your contact details and if so, which ones.</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="missing_date">Date must not be empty.</string>
    <string name="appearance">Appearance</string>
    <string name="invalid_rating_interval">Rating interval invalid.</string>
    <string name="rating">Rating</string>
    <string name="rate">Rate</string>
    <string name="missing_description">Description must not be empty.</string>
    <string name="missing_username">Username must not be empty.</string>
    <string name="username">Username</string>
    <string name="contact_info">User</string>
    <string name="notification">Notification</string>
    <string name="sort_spinner_item_amount_participants">Amount of participants</string>
    <string name="login">Login</string>
    <string name="title">Offer title</string>
...
    <string name="edit_subscriptions">Subscriptions</string>
    <string name="drawer_menu_subscriptions">Subscriptions</string>
    <string name="logout">Logout</string>
    <string name="contact_decline">Reject</string>
    <string name="currency">€</string>
    <string name="european_time_calling">" o'clock"</string>
    <string name="invalid_date_time_future">Time is in the future.</string>
    <string name="app_name" translatable="false">Meet &amp; Eat</string>
    <string name="e_mail" translatable="false">E-Mail</string>
    <string name="tag" translatable="false">Tag</string>
    <string name="map_api_key" translatable="false">api</string>
    <string name="add_tag" translatable="false">+ Tag</string>
    <string name="whitespace" translatable="false">&#160;</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="european_date_format" translatable="false">dd.MM.yyyy</string>
    <string name="european_time_format" translatable="false">HH:mm</string>
    <string name="decimal_format" translatable="false">%.2f</string>
    <string name="password_confirm">Password confirmation</string>
    <string name="passwords_not_matching">Passwords are not matching.</string>
    <string name="content_description_app_title">App title</string>
    <string name="content_description_back_button">Back button</string>
    <string name="content_description_background_image">Background image</string>
    <string name="content_description_offer_image">Offer image</string>
    <string name="content_description_spacer">Spacer</string>
    <string name="report_button">Report button</string>
...
