<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="meet_eat.app.fragment.login.RegisterFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgFragment">

        <ImageButton
            android:id="@+id/ibtBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:elevation="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_back"
            android:tint="@color/bgButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description_back_button" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibtBack">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- PROFILE IMAGE -->
                <FrameLayout
                    android:id="@+id/rFrameLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivRegisterProfile"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:adjustViewBounds="true"
                        android:elevation="4dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/profile_standard"
                        android:contentDescription="@string/content_description_profile_image" />

                    <ImageButton
                        android:id="@+id/ibtRegisterAdd"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom|end"
                        android:adjustViewBounds="true"
                        android:background="@drawable/bg_button"
                        android:backgroundTint="@color/symbol"
                        android:elevation="5dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/add"
                        android:tint="@android:color/black"
                        android:contentDescription="@string/content_description_add_profile_image_button" />
                </FrameLayout>

                <EditText
                    android:id="@+id/etRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.email}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rBarrier1" />

                <EditText
                    android:id="@+id/etRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints="newPassword"
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.password}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etRegisterEmail" />

                <EditText
                    android:id="@+id/etRegisterPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints="newPassword"
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.passwordConfirm}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword" />

                <EditText
                    android:id="@+id/etRegisterUsername"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints="username"
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.username}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etRegisterPasswordConfirm" />

                <EditText
                    android:id="@+id/etRegisterPhone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints="phoneNumber"
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.phoneNumber}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etRegisterUsername" />

                <TextView
                    android:id="@+id/tvRegisterBirthday"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:clickable="true"
                    android:elevation="5dp"
                    android:hint="@string/date_format"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etRegisterPhone" />

                <EditText
                    android:id="@+id/etRegisterHome"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:autofillHints="postalAddress"
                    android:background="@drawable/bg_edit_text"
                    android:clickable="true"
                    android:elevation="5dp"
                    android:hint="@string/home"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.home}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvRegisterBirthday" />

                <EditText
                    android:id="@+id/etRegisterDescription"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="16dp"
                    android:autofillHints=""
                    android:background="@drawable/bg_edit_text"
                    android:elevation="5dp"
                    android:gravity="top|start"
                    android:hint="@string/profile_description"
                    android:inputType="textMultiLine"
                    android:maxLength="300"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:text="@={fragment.profileDescription}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etRegisterHome" />

                <Button
                    android:id="@+id/btRegister"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_button"
                    android:elevation="5dp"
                    android:text="@string/register"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etRegisterDescription" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/rBarrier1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierAllowsGoneWidgets="false"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="rFrameLayout1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>