...
            android:layout_margin="16dp"
            android:background="@drawable/bg_button"
            android:elevation="20dp"
            android:text="@string/login"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btLoginRegister"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btLoginRegister"
            android:layout_width="150dp"
...
